# headless-ghidra

./: .gitignore  README.ja-JP.md  README.md  README.zh-CN.md
ghidra-agent-cli/: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.ja-JP.md  README.md  README.zh-CN.md  SKILL.md
ghidra-agent-cli/frida-scripts/: call-tree-trace.js  decomp-compare.js  dispatch-vtable-trace.js  frida-invoke.js  frida-run.js  frida-trace.js  fuzz-input-gen.js  hotpath-coverage.js  io-capture.js  io-compare.js  signature-analysis.js
ghidra-agent-cli/ghidra-scripts/: AddressFormats.java  AddressStrings.java  AnalyzeVtables.java  ApplyRenames.java  ApplySignatures.java  AutoAnalyze.java  DecompileFunction.java  ExportBaseline.java  ExportCallGraph.java  IdentifyLibraries.java  ImportBinary.java  ImportTypesAndSignatures.java  LintReviewArtifacts.java  RebuildProject.java  ReviewEvidenceCandidates.java  VerifyFunctionSignatures.java  VerifyRenames.java  YamlParsers.java  build-bundle.sh
ghidra-agent-cli/npm/main/: README.md  package.json
ghidra-agent-cli/release/: config.json
ghidra-agent-cli/scripts/release/: build-binaries.mjs  local-build-utils.mjs  prepublish.mjs  publish-npm-packages.mjs  rehearse.mjs  release-config.mjs  sync-platform-packages.mjs  (+1 more)
ghidra-agent-cli/src/: baseline.rs  context.rs  execution_log.rs  gate.rs  ghidra.rs  git_status.rs  help.rs  lib.rs  lock.rs  main.rs  paths.rs  progress.rs  rebuild.rs  schema.rs  scope.rs  third_party.rs  verify.rs  workspace.rs
ghidra-agent-cli/tests/: cli_test.rs  ghidra_real_test.rs  integration_pipeline_test.rs
(+134 files in other folders)
