[package]
name = "ghidra-agent-cli"
version = "1.6.3"
edition = "2024"
description = "Drive the headless-Ghidra decompilation pipeline end-to-end through schema-validated YAML workspaces, scripted Ghidra runs, and gated incremental reconstruction builds"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
directories = "5"
fs4 = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sha2 = "0.10"
walkdir = "2"
libc = "0.2"
regex = "1"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
